[gd_scene load_steps=11 format=3 uid="uid://br8wb8x5du078"]

[ext_resource type="Script" path="res://Scenes/ultimate_scene.gd" id="1_cdqgm"]
[ext_resource type="SpriteFrames" uid="uid://dkrlkg851i0vs" path="res://Scenes/02_Computer_Dive/computer_dive.tres" id="1_qg1or"]
[ext_resource type="SpriteFrames" uid="uid://de28chlpuf323" path="res://Scenes/03_Vacuum_Dive/VacuumDiveSeq.tres" id="2_fi3m1"]
[ext_resource type="SpriteFrames" uid="uid://ds665fnka2gnm" path="res://Scenes/03_Vacuum_Dive/ChipToHomeSeq.tres" id="3_v6xav"]
[ext_resource type="Texture2D" uid="uid://dwdofatdnx6jj" path="res://Assets/UI-Icons/Close.svg" id="4_8hs1f"]
[ext_resource type="Texture2D" uid="uid://cy8citvvou10q" path="res://Assets/UI-Icons/Menu.svg" id="5_u5mxl"]
[ext_resource type="Texture2D" uid="uid://cbw4o25yr7ve8" path="res://Assets/UI-Icons/Home.svg" id="6_0ym2l"]
[ext_resource type="Texture2D" uid="uid://bk0xxov3xo12x" path="res://Assets/UI-Icons/Inspect.svg" id="7_rhhtt"]
[ext_resource type="Texture2D" uid="uid://2vcrydf1xlow" path="res://Assets/UI-Icons/frame-inspect.svg" id="9_ag4t6"]
[ext_resource type="Texture2D" uid="uid://bh853obuqxhvt" path="res://Assets/UI-Icons/Arrow_back.svg" id="10_tfrh8"]

[node name="UltimateScene" type="Control" node_paths=PackedStringArray("Main_to_comp_seq", "Comp_to_chip_seq", "Chipt_to_main_seq", "Home_Button", "ExploreComputer_Button", "Chip_Button", "HomeFromChip_Button", "ReturnToComp_Button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cdqgm")
Main_to_comp_seq = NodePath("DiveToComp/MainToCompAnimation")
Comp_to_chip_seq = NodePath("CompToChip/AnimatedSprite2D")
Chipt_to_main_seq = NodePath("ChipToMain/AnimatedSprite2D")
Home_Button = NodePath("UI/TextureRect/VBoxContainer/HomeButton")
ExploreComputer_Button = NodePath("UI/TextureRect/VBoxContainer/ExploreComputer")
Chip_Button = NodePath("UI/TextureRect/VBoxContainer/ChipButton")
HomeFromChip_Button = NodePath("UI/TextureRect/VBoxContainer/HomeFromChip")
ReturnToComp_Button = NodePath("UI/TextureRect/VBoxContainer/ReturnToComp")

[node name="DiveToComp" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainToCompAnimation" type="AnimatedSprite2D" parent="DiveToComp"]
position = Vector2(960, 540)
sprite_frames = ExtResource("1_qg1or")

[node name="CompToChip" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CompToChip"]
position = Vector2(960, 540)
sprite_frames = ExtResource("2_fi3m1")

[node name="ChipToMain" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ChipToMain"]
position = Vector2(960, 540)
sprite_frames = ExtResource("3_v6xav")

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 343.0
offset_bottom = 428.0

[node name="TextureRect" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 5.229
anchor_bottom = 2.815
offset_left = 87.0
offset_top = 121.0
offset_right = -1112.55
offset_bottom = -405.82

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ExitButton" type="Button" parent="UI/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Exit"
icon = ExtResource("4_8hs1f")

[node name="MenuButton" type="Button" parent="UI/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Menu"
icon = ExtResource("5_u5mxl")

[node name="HomeButton" type="Button" parent="UI/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Home"
icon = ExtResource("6_0ym2l")

[node name="HomeFromChip" type="Button" parent="UI/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Home"
icon = ExtResource("6_0ym2l")

[node name="ExploreComputer" type="Button" parent="UI/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Explore Computer"
icon = ExtResource("7_rhhtt")

[node name="ChipButton" type="Button" parent="UI/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Explore Chip"
icon = ExtResource("9_ag4t6")

[node name="ReturnToComp" type="Button" parent="UI/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Return"
icon = ExtResource("10_tfrh8")

[connection signal="pressed" from="UI/TextureRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="UI/TextureRect/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/TextureRect/VBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="UI/TextureRect/VBoxContainer/HomeFromChip" to="." method="_on_HomeFromChip_button_pressed"]
[connection signal="pressed" from="UI/TextureRect/VBoxContainer/ExploreComputer" to="." method="_on_explore_computer_pressed"]
[connection signal="pressed" from="UI/TextureRect/VBoxContainer/ChipButton" to="." method="_on_chip_button_pressed"]
[connection signal="pressed" from="UI/TextureRect/VBoxContainer/ReturnToComp" to="." method="_on_return_to_comp_pressed"]
